@@ -158,10 +158,10 @@ hiphp Commands :
 [OPTIONS]─────┐
   ┌───────────┘
   ├─> --help                        ─> # Display this help.
-  ├─> --exit                        ─> # Exit this console.
   ├─> --geth                        ─> # Get the hole Code, "HIPHP_HOLE_CODE" It has the same purpose.
-  ├─> --cls                         ─> # Clear console.
   ├─> --phpinfo                     ─> # Some information about the server.
+  ├─> --cls                         ─> # Clear console.
+  ├─> --exit                        ─> # Exit this console.
 ┌─┘
 └[ACTIONS]────┐
   ┌───────────┘
@@ -194,6 +194,7 @@ hiphp Commands :
 ┌─┘
 └[ABOUT]─────┐
   ┌──────────┘
+  ├─> --update                      ─> # check for updates.
   ├─> --license                     ─> # This project license.
   ├─> --about                       ─> # About this project.
   .
@@ -232,6 +233,7 @@ hiphp Commands :
 
 ```
 ## 0.2.21 [18-08-2022]
+ - Add "--update" command.
  - Add "--phpinfo" command.
  - Fix not being able to install internally on Nethunter.
  - Fix some issues in uploading files.
